# screen_drawer

./: CMakeLists.txt  MainWindow.cpp  MainWindow.h  Toolbar.cpp  Toolbar.h
.cache/clangd/index/: MainWindow.cpp.0B95D3E71C9CFB39.idx  MainWindow.h.8264FCB2475A77C1.idx  Toolbar.cpp.E820EDD01EC0E84E.idx  Toolbar.h.9E05436B9A333941.idx  main.cpp.FBC7C56FACB8870B.idx
plan/: README.md
